# TrackRat

./: .gitignore  .pre-commit-config.yaml  .pre-commit-yamllint.sh  ADDITIONAL_IMPROVEMENTS.md  AGENTS.md  CEO.md  CLAUDE.md  CONSOLIDATED_V2_REMAINING_WORK.md  CONTRIBUTING.md  CONVERT_NOTIFICATIONS_TO_LIVE_ACTIVITIES.md  CURRENT_LIVE_ACTIVITY_ARCHITECTURE.md  DESIGN-PROPOSAL-staging-analysis.md  LICENSE  LIVE_ACTIVITIES_NO_TEXT_SHOWING.md  LIVE_ACTIVITY_IMPROVEMENTS.md  Makefile  OPERATORS_GUIDE.md  PM.md  PURE_DATA_IMPLEMENTATION_SUMMARY.md  README.md  SELF_HOSTING.md  STATION_CODES.txt  STILL_TO_DO_1.md  STILL_TO_DO_2.md  SWITCH_TO_REAL_DATA_BASED_PREDICTIONS.md  TODO.txt  UNIVERSAL_LINKS.md  aaa  check-dev-status.sh  deploy-dev.sh  env.sh  lirr_penn_tracks_correct.py  lirr_requirements.txt  plan.md  repo.ocu.star  setup-pre-commit.sh
backend/: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTAINERIZATION_SUMMARY.md  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  INDICES.md  README.md  TRACK_ARRIVAL_TIMES.md  USAGE.md  check_track_conflicts.py  cloudbuild.yaml  deployment-example.env  docker-compose.yml  entrypoint.sh  init-db.sql  model.py  mypy.ini  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-inference.txt  requirements-production.txt  requirements.txt
backend/arch_docs/: .OPS_ARCH_REFACTOR.md.swp  AMNA_BUG.md  AMNA_BUG.md-debug  OPENTELEMETRY_SETUP.md  OPS_ARCH_REFACTOR.md
backend/certs/: AuthKey_4WC3F645FR.p8  AuthKey_XNFHX5SPQL.p8
backend/config/: dev.yaml  staging.yaml  test.yaml
backend/models/: encoders_1.0.0_NP_20250615155655.pkl  encoders_1.0.0_NY_20250615155630.pkl  encoders_1.0.0_PJ_20250615155709.pkl  encoders_1.0.0_TR_20250615155722.pkl  feature_names_1.0.0_NP_20250615155655.txt  feature_names_1.0.0_NY_20250531101111.txt  feature_names_1.0.0_NY_20250615155630.txt  feature_names_1.0.0_TR_20250615155722.txt  metadata_1.0.0_NP_20250615155655.json  metadata_1.0.0_NY_20250531101111.json  metadata_1.0.0_NY_20250615155630.json  metadata_1.0.0_PJ_20250615155709.json  metadata_1.0.0_TR_20250615155722.json  scaler_1.0.0_NP_20250615155655.pkl  scaler_1.0.0_NY_20250531101111.pkl  scaler_1.0.0_NY_20250615155630.pkl  scaler_1.0.0_PJ_20250615155709.pkl  scaler_1.0.0_TR_20250615155722.pkl  target_encoder_1.0.0_NP_20250615155655.pkl  target_encoder_1.0.0_NY_20250531101111.pkl  target_encoder_1.0.0_PJ_20250615155709.pkl  target_encoder_1.0.0_TR_20250615155722.pkl  track_pred_model_1.0.0_NP_20250615155655.pt  track_pred_model_1.0.0_NY_20250531101111.pt  track_pred_model_1.0.0_NY_20250615155630.pt  track_pred_model_1.0.0_PJ_20250615155709.pt  track_pred_model_1.0.0_TR_20250615155722.pt  tracks_1.0.0_NP_20250615155655.pkl  tracks_1.0.0_NY_20250615155630.pkl  tracks_1.0.0_PJ_20250615155709.pkl  tracks_1.0.0_TR_20250615155722.pkl
backend/tests/: conftest.py  run_all_tests.sh  run_unit_tests.sh  test_config.yaml  test_utils.py
backend/tests/integration/: test_api_metrics.py  test_cross_api_drift_integration.py  test_data_pipeline.py  test_scheduler.py  test_stop_lifecycle_integration.py
backend/tests/unit/: test_api.py  test_apns_error_handling.py  test_arrival_time_tracking.py  test_cli.py  test_cli_filtering.py  test_config.py  test_consolidated_models.py  test_consolidated_notifications.py  test_consolidation_v2.py  test_data_collection.py  test_data_collectors_metrics.py  test_data_import.py  test_db_metrics.py  test_db_models.py  test_drift_tracking.py  test_eager_loading.py  test_feature_engineering.py  test_fuzzy_time_matching.py  test_github_issue_93_fix.py  test_health_endpoint.py  test_model_consolidation_baseline.py  test_performance_migrations.py  test_phase1_integration.py  test_phase1_pydantic_compatibility.py  test_phase2_router_integration.py  test_phase2_simple_integration.py  test_platform_consolidation.py  test_prediction.py  test_prediction_metrics.py  test_prediction_service_filtering.py  test_repository_filtering.py  test_track_stats_platform.py  test_train_stop_repository.py  test_unified_notifications.py  test_unique_constraint_fix.py
backend/trackcast/: __init__.py  cli.py  config.py  constants.py  exceptions.py  metrics.py  telemetry.py  utils.py
backend/trackcast/api/: __init__.py  app.py  models.py  models_consolidated.py
backend/trackcast/data/: __init__.py  collectors.py  processors.py
backend_v2/: .dockerignore  .env  .env.example  .gitignore  AMTRAK_TEST_PLAN.md  API_USAGE_OVERVIEW.md  APNS_DOCKER_FIX.md  CLAUDE.md  DOCKER_APNS_VALIDATION.md  Dockerfile  INTEGRATIONS.md  JOURNEY_COMPLETION_FIX_SUMMARY.md  PATH_REALTIME_DESIGN.md  README.md  SQLITE_IMPROVEMENTS.md  TRANSIT_TIME_TRACKING_DESIGN.md  alembic.ini  debug_analysis_issue.py  debug_completion_bug.py  debug_current_njt.py  debug_segments.py  debug_specific_train.py  debug_stops.py  debug_today_train.py  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.tunnel.yml  docker-compose.yml  docker-entrypoint.sh  fix_existing_journeys.py  proposed_honest_predictions.py  pyproject.toml  release.ocu.star  run_backend.sh  run_tests.sh  run_tests_with_db.sh  stop_backend.sh  test-apns-fix.sh  test_completion_fix.py  test_departure_fixes.py  (+5 more)
backend_v2/certs/: README.md
backend_v2/data/: hb_track_training_data.csv  mp_track_training_data.csv  nd_track_training_data.csv  np_track_training_data.csv  ny_penn_track_training_data.csv  ny_track_training_data.csv  ph_track_training_data.csv  tr_track_training_data.csv
backend_v2/docs/: journey-lifecycle.md
backend_v2/lib/: secrets.star  terraform.star
backend_v2/ml/: train_track_predictor.py
backend_v2/scripts/: README_migration.md  export_track_training_data.py  generate_amtrak_stations.py  insert_nationwide_stations.py  inspect_mta_extensions.py  migrate_historical_data.py  validate_mta_stations.py  validate_njt_stations.py
backend_v2/tests/: conftest.py  test_api_cache_service.py  test_api_health.py  test_api_trains.py  test_basic.py  test_collectors.py  test_config.py  test_hsts_middleware.py  test_live_activity_delay.py  test_staging_safety.py  test_utils.py
(+1102 files in other folders)
